--- a/maintenance/auto/templates/auto/inspectservice_form.html
+++ b/maintenance/auto/templates/auto/inspectservice_form.html
@@ -1,8 +1,10 @@
 {% extends 'auto/layout.html' %}
 
 {% block body%}
-<form class="form-horizontal">
+<form class="form-horizontal" action={% url 'auto:newinspection' %} method="post">
+    {% csrf_token %}
     {{ form.as_p }}
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
 
