--- a/maintenance/auto/templates/auto/car_list.html
+++ b/maintenance/auto/templates/auto/car_list.html
@@ -1,11 +1,17 @@
 {% extends 'auto/layout.html' %}
 
 {% block body%}
-<ul>
-    {% for car in object_list %}
-    <li>
-        <a href={{ car.get_absolute_url }}>{{ car }}</a>
-    </li>
-    {% endfor %}
-</ul>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="btn-group-vertical btn-block">
+                {% for car in object_list %}
+                <a class="btn btn-default btn-lg" href={{ car.get_absolute_url }} role="button">
+                    {{ car }}
+                </a>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
