--- a/maintenance/auto/templates/auto/inspectservice_form.html
+++ b/maintenance/auto/templates/auto/inspectservice_form.html
@@ -1,10 +1,30 @@
 {% extends 'auto/layout.html' %}
 
 {% block body%}
-<form class="form-horizontal" action={% url 'auto:newinspection' %} method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
-</form>
+<div class="container">
+    <form action={% url 'auto:newinspection' %} method="post">
+        {% csrf_token %}
+        {% for field in form %}
+        <div class="row mb-3">
+            {{ field.errors }}
+            <label for="inputEmail3" class="col-sm-2 col-form-label">
+                {{ field.label }}
+            </label>
+            <div class="col-sm-10">
+                {{ field }}
+            </div>
+            {% if field.help_text %}
+            <p class="help">{{ field.help_text|safe }}</p>
+            {% endif %}
+        </div>
+        {% endfor %}
+        <div class="row mb-3">
+            <div class="col-sm-10"></div>
+            <div class="col-sm-10">
+                <input type="submit" value="Submit">
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
 
