Reduced available options on Inspection form to only include the current vehicle

--- a/maintenance/auto/templates/auto/car_detail.html
+++ b/maintenance/auto/templates/auto/car_detail.html
@@ -5,7 +5,7 @@
     <h3>{{ car }}</h3>
     <div class="btn-toolbar" role="toolbar">
         <div class="btn-group-vertical">
-            <a class="btn btn-primary" href={% url 'auto:newinspection' %} role="button">Report an Inspection</a>
+            <a class="btn btn-primary" href={% url 'auto:newinspection' car.pk %} role="button">Report an Inspection</a>
             <a class="btn btn-default" href="#" role="button">Configure an Inspection</a>
         </div>
         <div class="btn-group-vertical">
