--- a/maintenance/auto/templates/auto/inspection_form.html
+++ b/maintenance/auto/templates/auto/inspection_form.html
@@ -2,9 +2,8 @@
 
 {% block body%}
 <div class="container">
-    <form action={% url 'auto:reportinspectionpost' %} method="post">
+    <form action={% url 'auto:configureinspection' %} method="post">
         {% include 'auto/form_snippet.html' %}
     </form>
 </div>
 {% endblock %}
-
