--- a/maintenance/auto/templates/auto/activity_detail.html
+++ b/maintenance/auto/templates/auto/activity_detail.html
@@ -2,6 +2,8 @@
 
 {% block body%}
 <div class="container">
+    <h3>{{ object.part.car }}</h3>
+    <h3>{{ object.part }}</h3>
     <h3>{{ object }}</h3>
     <div class="row">
         <div class="col">
@@ -14,5 +16,33 @@
             </div>
         </div>
     </div>
+    <form action={% url 'auto:inspectserviceadd' %} method="post">
+        {% csrf_token %}
+        {% include 'auto/formfield_snippet.html' with field=form.date %}
+        {% include 'auto/formfield_snippet.html' with field=form.odometer %}
+        {% include 'auto/formfield_snippet.html' with field=form.description %}
+        <div class="row mb-3">
+            {{ form.activity.errors }}
+            <label for="inputEmail3" class="col-sm-2 col-form-label">
+                {{ form.activity.label }}
+            </label>
+            <div class="col-sm-10">
+                <select name="activity" required id="id_activity">
+                    <option value="{{ object.id }}" selected>
+                        {{ object }}
+                    </option>
+                </select>
+            </div>
+            {% if form.activity.help_text %}
+            <p class="help">{{ form.activity.help_text|safe }}</p>
+            {% endif %}
+        </div>
+        <div class="row mb-3">
+            <div class="col-sm-10"></div>
+            <div class="col-sm-10">
+                <input type="submit" value="Submit">
+            </div>
+        </div>
+    </form>
 </div>
 {% endblock %}
