--- a/maintenance/auto/templates/auto/form_snippet.html
+++ b/maintenance/auto/templates/auto/form_snippet.html
@@ -1,17 +1,6 @@
 {% csrf_token %}
 {% for field in form %}
-<div class="row mb-3">
-    {{ field.errors }}
-    <label for="inputEmail3" class="col-sm-2 col-form-label">
-        {{ field.label }}
-    </label>
-    <div class="col-sm-10">
-        {{ field }}
-    </div>
-    {% if field.help_text %}
-    <p class="help">{{ field.help_text|safe }}</p>
-    {% endif %}
-</div>
+{% include 'auto/formfield_snippet.html' %}
 {% endfor %}
 <div class="row mb-3">
     <div class="col-sm-10"></div>
