--- a/maintenance/auto/templates/auto/inspectservice_form.html
+++ b/maintenance/auto/templates/auto/inspectservice_form.html
@@ -2,7 +2,7 @@
 
 {% block body%}
 <div class="container">
-    <form action={% url 'auto:reportinspectionpost' %} method="post">
+    <form action={% url 'auto:inspectserviceadd' %} method="post">
         {% include 'auto/form_snippet.html' %}
     </form>
 </div>
