Added forms for new activities

--- a/maintenance/auto/templates/auto/part_detail.html
+++ b/maintenance/auto/templates/auto/part_detail.html
@@ -10,11 +10,15 @@
                 <a class="btn btn-default btn-lg" href={{ part.inspection.get_absolute_url }} role="button">
                     {{ part.inspection }}
                 </a>
+                {% else %}
+                {{ inspectionform }}
                 {% endif %}
                 {% if part.replacement %}
                 <a class="btn btn-default btn-lg" href={{ part.replacement.get_absolute_url }} role="button">
                     {{ part.replacement }}
                 </a>
+                {% else %}
+                {{ replacementform }}
                 {% endif %}
             </div>
         </div>
