--- a/maintenance/auto/templates/auto/activity_detail.html
+++ b/maintenance/auto/templates/auto/activity_detail.html
@@ -16,33 +16,37 @@
             </div>
         </div>
     </div>
-    <form action={% url 'auto:inspectserviceadd' %} method="post">
-        {% csrf_token %}
-        {% include 'auto/formfield_snippet.html' with field=form.date %}
-        {% include 'auto/formfield_snippet.html' with field=form.odometer %}
-        {% include 'auto/formfield_snippet.html' with field=form.description %}
-        <div class="row mb-3">
-            {{ form.activity.errors }}
-            <label for="inputEmail3" class="col-sm-2 col-form-label">
-                {{ form.activity.label }}
-            </label>
-            <div class="col-sm-10">
-                <select name="activity" required id="id_activity">
-                    <option value="{{ object.id }}" selected>
-                        {{ object }}
-                    </option>
-                </select>
-            </div>
-            {% if form.activity.help_text %}
-            <p class="help">{{ form.activity.help_text|safe }}</p>
-            {% endif %}
+    <div class="row">
+        <div class="col">
+            <form action={% url 'auto:inspectserviceadd' %} method="post">
+                {% csrf_token %}
+                {% include 'auto/formfield_snippet.html' with field=form.date %}
+                {% include 'auto/formfield_snippet.html' with field=form.odometer %}
+                {% include 'auto/formfield_snippet.html' with field=form.description %}
+                <div class="row mb-3">
+                    {{ form.activity.errors }}
+                    <label for="inputEmail3" class="col-sm-2 col-form-label">
+                        {{ form.activity.label }}
+                    </label>
+                    <div class="col-sm-10">
+                        <select name="activity" required id="id_activity">
+                            <option value="{{ object.id }}" selected>
+                                {{ object }}
+                            </option>
+                        </select>
+                    </div>
+                    {% if form.activity.help_text %}
+                    <p class="help">{{ form.activity.help_text|safe }}</p>
+                    {% endif %}
+                </div>
+                <div class="row mb-3">
+                    <div class="col-sm-10"></div>
+                    <div class="col-sm-10">
+                        <input type="submit" value="Submit">
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="row mb-3">
-            <div class="col-sm-10"></div>
-            <div class="col-sm-10">
-                <input type="submit" value="Submit">
-            </div>
-        </div>
-    </form>
+    </div>
 </div>
 {% endblock %}
