--- a/maintenance/auto/templates/auto/car_detail.html
+++ b/maintenance/auto/templates/auto/car_detail.html
@@ -3,16 +3,6 @@
 {% block body%}
 <div class="container">
     <h3>{{ car }}</h3>
-    <div class="btn-toolbar" role="toolbar">
-        <div class="btn-group-vertical">
-            <a class="btn btn-primary" href={% url 'auto:reportinspectionget' car.pk %} role="button">Report an Inspection</a>
-            <a class="btn btn-default" href={% url 'auto:configureinspection' %} role="button">Configure an Inspection</a>
-        </div>
-        <div class="btn-group-vertical">
-            <a class="btn btn-primary" href="#" role="button">Report a Replacement</a>
-            <a class="btn btn-default" href="#" role="button">Configure a Replacement</a>
-        </div>
-    </div>
     <div class="row">
         <div class="col">
             <div class="btn-group-vertical btn-block">
@@ -21,6 +11,32 @@
                     {{ part }}
                 </a>
                 {% endfor %}
+                <form action={% url 'auto:configurepart' %} method="post">
+                    {% csrf_token %}
+                    {% include 'auto/formfield_snippet.html' with field=form.parttype %}
+                    <div class="row mb-3">
+                        {{ form.car.errors }}
+                        <label for="inputEmail3" class="col-sm-2 col-form-label">
+                            {{ form.car.label }}
+                        </label>
+                        <div class="col-sm-10">
+                            <select name="car" required id="id_car">
+                                <option value="{{ object.id }}" selected>
+                                    {{ object }}
+                                </option>
+                            </select>
+                        </div>
+                        {% if form.car.help_text %}
+                        <p class="help">{{ form.car.help_text|safe }}</p>
+                        {% endif %}
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-sm-10"></div>
+                        <div class="col-sm-10">
+                            <input type="submit" value="Submit">
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
