--- a/maintenance/auto/templates/auto/activity_detail.html
+++ b/maintenance/auto/templates/auto/activity_detail.html
@@ -19,6 +19,7 @@
     <div class="row">
         <div class="col">
             <form action={% url 'auto:inspectserviceadd' %} method="post">
+                <h4>Add Service Record</h4>
                 {% csrf_token %}
                 {% include 'auto/formfield_snippet.html' with field=form.date %}
                 {% include 'auto/formfield_snippet.html' with field=form.odometer %}
