--- a/maintenance/auto/templates/auto/part_detail.html
+++ b/maintenance/auto/templates/auto/part_detail.html
@@ -14,7 +14,18 @@
                 <form action={% url 'auto:configureinspection' %} method="post">
                     <h4>Add Inspection Interval</h4>
                     {% csrf_token %}
-                    {% include 'auto/formfield_snippet.html' with field=inspectionform.duration %}
+                    <div class="row mb-3">
+                        {{ inspectionform.duration.errors }}
+                        <label for="inputEmail3" class="col-sm-2 col-form-label">
+                            {{ inspectionform.duration.label }} (months)
+                        </label>
+                        <div class="col-sm-10">
+                            {{ inspectionform.duration }}
+                        </div>
+                        {% if inspectionform.duration.help_text %}
+                        <p class="help">{{ inspectionform.duration.help_text|safe }}</p>
+                        {% endif %}
+                    </div>
                     {% include 'auto/formfield_snippet.html' with field=inspectionform.distance %}
                     <div class="row mb-3">
                         {{ inspectionform.part.errors }}
@@ -48,7 +59,18 @@
                 <form action={% url 'auto:configurereplacement' %} method="post">
                     <h4>Add Replacement Interval</h4>
                     {% csrf_token %}
-                    {% include 'auto/formfield_snippet.html' with field=replacementform.duration %}
+                    <div class="row mb-3">
+                        {{ replacementform.duration.errors }}
+                        <label for="inputEmail3" class="col-sm-2 col-form-label">
+                            {{ replacementform.duration.label }} (months)
+                        </label>
+                        <div class="col-sm-10">
+                            {{ replacementform.duration }}
+                        </div>
+                        {% if replacementform.duration.help_text %}
+                        <p class="help">{{ replacementform.duration.help_text|safe }}</p>
+                        {% endif %}
+                    </div>
                     {% include 'auto/formfield_snippet.html' with field=replacementform.distance %}
                     <div class="row mb-3">
                         {{ replacementform.part.errors }}
