Added car to the top of part detail page, like a breadcrumb without a link

--- a/maintenance/auto/templates/auto/part_detail.html
+++ b/maintenance/auto/templates/auto/part_detail.html
@@ -2,6 +2,7 @@
 
 {% block body%}
 <div class="container">
+    <h3>{{ part.car }}</h3>
     <h3>{{ part }}</h3>
     <div class="row">
         <div class="col">
