Fixed issues for local debugging

--- a/maintenance/auto/templates/auto/car_list.html
+++ b/maintenance/auto/templates/auto/car_list.html
@@ -10,7 +10,7 @@
                     {{ car }}
                 </a>
                 {% empty %}
-                <a class="btn btn-default btn-lg" href={% url 'maintenance:admin' %} role="button">
+                <a class="btn btn-default btn-lg" href={% url 'admin:index' %} role="button">
                     Admin
                 </a>
                 {% endfor %}
