--- a/auto/templates/auto/car_detail.html
+++ b/auto/templates/auto/car_detail.html
@@ -11,6 +11,9 @@
                     {{ part }}
                 </a>
                 {% endfor %}
+                <a class="btn btn-default btn-lg" href={{ car.get_fuel_url }} role="button">
+                    Fuel
+                </a>
                 <form action={% url 'auto:configurepart' %} method="post">
                     <h4>Add Part</h4>
                     {% csrf_token %}
