--- a/auto/templates/auto/activity_detail.html
+++ b/auto/templates/auto/activity_detail.html
@@ -5,17 +5,20 @@
     <h3>{{ object.part.car }}</h3>
     <h3>{{ object.part }}</h3>
     <h3>{{ object }}</h3>
-    <div class="row">
-        <div class="col">
-            <div class="btn-group-vertical btn-block">
-                {% for service in object.services.all %}
-                <a class="btn btn-default btn-lg" href={{ service.get_absolute_url }} role="button">
+    <table class="table">
+        <tbody>
+            {% for service in object.services.all %}
+            <tr>
+                <td>
                     {{ service }}
-                </a>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
+                </td>
+                <td>
+                    {{ service.description }}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
     <div class="row">
         <div class="col">
             <form action={% block url1 %}{% url 'auto:index' %}{% endblock %} method="post">
