Further use of tables as style for fuel services

--- a/auto/templates/auto/activity_detail.html
+++ b/auto/templates/auto/activity_detail.html
@@ -5,7 +5,7 @@
     <h3>{{ object.part.car }}</h3>
     <h3>{{ object.part }}</h3>
     <h3>{{ object }}</h3>
-    <table class="table">
+    <table class="table table-hover">
         <tbody>
             {% for service in object.services.all %}
             <tr>
