--- a/auto/templates/auto/car_detail.html
+++ b/auto/templates/auto/car_detail.html
@@ -2,7 +2,14 @@
 
 {% block body%}
 <div class="container">
-    <h3>{{ car }}</h3>
+    <h3>
+        {{ car }}
+        {% if car.vin %}
+        <small class="text-muted">
+            {{ car.vin }}
+        </small>
+        {% endif %}
+    </h3>
     <div class="row">
         <div class="col">
             <div class="btn-group-vertical btn-block">
