--- a/auto/templates/auto/fuel_detail.html
+++ b/auto/templates/auto/fuel_detail.html
@@ -4,17 +4,23 @@
 <div class="container">
     <h3>{{ car }}</h3>
     <h3>Fuel</h3>
-    <div class="row">
-        <div class="col">
-            <div class="btn-group-vertical btn-block">
-                {% for service in car.fuellings.all %}
-                <a class="btn btn-default btn-lg" href={{ service.get_absolute_url }} role="button">
+    <table class="table table-hover">
+        <tbody>
+            {% for service in car.fuellings.all %}
+            <tr>
+                <td>
                     {{ service }}
-                </a>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
+                </td>
+                <td>
+                    {{ service.volume }}
+                </td>
+                <td>
+                    {{ service.description }}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
     <div class="row">
         <div class="col">
             <form action={% block url1 %}{% url 'auto:fuelserviceadd' %}{% endblock %} method="post">
