--- a/auto/templates/auto/car_detail.html
+++ b/auto/templates/auto/car_detail.html
@@ -23,6 +23,7 @@
                 </a>
                 <form action={% url 'auto:configurepart' %} method="post">
                     <h4>Add Part</h4>
+					{% if request.user.is_authenticated %}
                     {% csrf_token %}
                     {% include 'auto/formfield_snippet.html' with field=form.parttype %}
                     <div class="row mb-3">
@@ -47,6 +48,7 @@
                             <input type="submit" value="Submit">
                         </div>
                     </div>
+					{% endif %}
                 </form>
             </div>
         </div>
