--- a/auto/templates/auto/layout.html
+++ b/auto/templates/auto/layout.html
@@ -10,5 +10,10 @@
         {% block body %}
         Welcome
         {% endblock %}
+		{% if not request.user.is_authenticated %}
+		<a class="btn btn-default btn-lg" href={% url 'admin:login' %} role="button">
+			Please login to add entries
+		</a>
+		{% endif %}
     </body>
 </html>
