--- a/auto/templates/auto/part_detail.html
+++ b/auto/templates/auto/part_detail.html
@@ -14,6 +14,7 @@
                 {% else %}
                 <form action={% url 'auto:configureinspection' %} method="post">
                     <h4>Add Inspection Interval</h4>
+					{% if request.user.is_authenticated %}
                     {% csrf_token %}
                     <div class="row mb-3">
                         {{ inspectionform.duration.errors }}
@@ -50,6 +51,7 @@
                             <input type="submit" value="Submit">
                         </div>
                     </div>
+					{% endif %}
                 </form>
                 {% endif %}
                 {% if part.replacement %}
@@ -59,6 +61,7 @@
                 {% else %}
                 <form action={% url 'auto:configurereplacement' %} method="post">
                     <h4>Add Replacement Interval</h4>
+					{% if request.user.is_authenticated %}
                     {% csrf_token %}
                     <div class="row mb-3">
                         {{ replacementform.duration.errors }}
@@ -95,6 +98,7 @@
                             <input type="submit" value="Submit">
                         </div>
                     </div>
+					{% endif %}
                 </form>
                 {% endif %}
             </div>
